[gd_scene load_steps=19 format=3 uid="uid://cba3m5gci8old"]

[ext_resource type="Script" path="res://nodes/ui/ui.gd" id="1_yktcp"]
[ext_resource type="Texture2D" uid="uid://cqutuq0jrsqbu" path="res://resources/sprites/icons/park.svg" id="2_wwa4d"]
[ext_resource type="FontFile" uid="uid://b3v175ls5slpe" path="res://resources/fonts/PIXELADE.TTF" id="3_g1lr1"]
[ext_resource type="Material" uid="uid://de0kp0bflu8l6" path="res://materials/filter_shader_material_day.tres" id="4_y8ln0"]
[ext_resource type="PackedScene" uid="uid://bkxydu410llqn" path="res://nodes/ui/settings.tscn" id="6_1eey1"]
[ext_resource type="Texture2D" uid="uid://dptxys2tpqwm1" path="res://resources/sprites/icons/icons.png" id="7_acr4x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bnnow"]
bg_color = Color(0, 0, 0, 0.788235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggjfe"]
bg_color = Color(0, 0, 0, 0.654902)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mo36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2pxu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3q2we"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_400cc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yld6r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjwsg"]
bg_color = Color(0, 0, 0, 0.737255)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[sub_resource type="Animation" id="Animation_t16xq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_34fcx"]
resource_name = "notification_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_av3cc"]
resource_name = "notification_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fht44"]
_data = {
"RESET": SubResource("Animation_t16xq"),
"notification_in": SubResource("Animation_34fcx"),
"notification_out": SubResource("Animation_av3cc")
}

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_yktcp")

[node name="Filter" type="ColorRect" parent="."]
material = ExtResource("4_y8ln0")
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.061
offset_left = -3873.0
offset_top = -1463.0
offset_right = 4023.0
offset_bottom = 2914.73

[node name="UiControl" type="VBoxContainer" parent="."]
z_index = 4096
y_sort_enabled = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UiControl"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bnnow")

[node name="MarginContainer" type="MarginContainer" parent="UiControl/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 1

[node name="Banner" type="BoxContainer" parent="UiControl/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2

[node name="Location" type="RichTextLabel" parent="UiControl/PanelContainer/MarginContainer/Banner"]
y_sort_enabled = true
custom_minimum_size = Vector2(249, 41)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_g1lr1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "Central park"

[node name="Time" type="RichTextLabel" parent="UiControl/PanelContainer/MarginContainer/Banner"]
y_sort_enabled = true
custom_minimum_size = Vector2(79, 41)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_g1lr1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[right] 00:00"

[node name="Icon" type="Control" parent="UiControl/PanelContainer/MarginContainer/Banner"]
custom_minimum_size = Vector2(74, 49)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Icon" type="Sprite2D" parent="UiControl/PanelContainer/MarginContainer/Banner/Icon"]
position = Vector2(23.5, 22.5)
scale = Vector2(1.625, 1.625)
texture = ExtResource("2_wwa4d")

[node name="Icon2" type="Sprite2D" parent="UiControl/PanelContainer/MarginContainer/Banner/Icon"]
position = Vector2(50, 28)
scale = Vector2(1.00521, 1.00521)
texture = ExtResource("2_wwa4d")

[node name="Banner" type="ColorRect" parent="UiControl/PanelContainer/MarginContainer/Banner"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.835294)

[node name="ShowSettings" type="MarginContainer" parent="UiControl"]
custom_minimum_size = Vector2(1, 100)
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16

[node name="Control" type="Control" parent="UiControl/ShowSettings"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="UiControl/ShowSettings/Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 17.0
offset_top = 11.0
offset_right = 90.0
offset_bottom = 84.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ggjfe")

[node name="Icons" type="Sprite2D" parent="UiControl/ShowSettings/Control"]
modulate = Color(1, 1, 1, 0.729412)
position = Vector2(54, 48)
scale = Vector2(3.375, 3.375)
texture = ExtResource("7_acr4x")
hframes = 8

[node name="Button" type="Button" parent="UiControl/ShowSettings/Control"]
custom_minimum_size = Vector2(86, 82)
layout_mode = 2
offset_left = 10.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 90.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_4mo36")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_m2pxu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3q2we")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_400cc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yld6r")

[node name="MarginContainer" type="MarginContainer" parent="UiControl"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 19

[node name="InfoBanner" type="PanelContainer" parent="UiControl/MarginContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(19, 63)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xjwsg")

[node name="Info" type="RichTextLabel" parent="UiControl/MarginContainer/InfoBanner"]
z_index = 2
y_sort_enabled = true
custom_minimum_size = Vector2(519, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 0.662745)
theme_override_fonts/normal_font = ExtResource("3_g1lr1")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Tap  with 3 fingers  to center the camera"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiControl/MarginContainer/InfoBanner"]
libraries = {
"": SubResource("AnimationLibrary_fht44")
}

[node name="Timer" type="Timer" parent="UiControl/MarginContainer/InfoBanner"]

[node name="Settings" parent="." instance=ExtResource("6_1eey1")]
visible = false
z_index = 4096
y_sort_enabled = true
